# noir

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  get_verus_std.sh  noir.nix  shell.nix  venir-toolchain.toml  verusStd.nix
acvm-repo/acir/: Cargo.toml
acvm-repo/acir/src/circuit/: mod.rs
acvm-repo/acir_field/: Cargo.toml
acvm-repo/acir_field/src/: lib.rs
acvm-repo/acir_field_goldilocks/: Cargo.toml
acvm-repo/acir_field_goldilocks/src/: goldilocks_field.rs  lib.rs
acvm-repo/acvm/: Cargo.toml
acvm-repo/acvm_js/: Cargo.toml
acvm-repo/blackbox_solver/: Cargo.toml
acvm-repo/bn254_blackbox_solver/: Cargo.toml
acvm-repo/brillig/: Cargo.toml
acvm-repo/brillig_vm/: Cargo.toml
acvm-repo/goldilocks_blackbox_solver/: Cargo.toml
acvm-repo/goldilocks_blackbox_solver/benches/: criterion.rs
acvm-repo/goldilocks_blackbox_solver/src/: lib.rs
compiler/fm/src/: file_map.rs
compiler/formal_verification/src/: inline_globals.rs  parse.rs  typing.rs
compiler/fv_bridge/src/: lib.rs
compiler/noirc_driver/: Cargo.toml
compiler/noirc_driver/src/: lib.rs  program.rs
compiler/noirc_driver/tests/: noir_public_api_canary.rs
compiler/noirc_errors/src/: reporter.rs
compiler/noirc_evaluator/: Cargo.toml
compiler/noirc_evaluator/src/: errors.rs  lib.rs  ssa.rs
compiler/noirc_evaluator/src/acir/: mod.rs
compiler/noirc_frontend/: Cargo.toml
compiler/noirc_frontend/src/: node_interner.rs
compiler/noirc_printable_type/: Cargo.toml
compiler/wasm/: Cargo.toml
compiler/wasm/src/: compile.rs  compile_new.rs
formal_verification_docs/: book.toml
formal_verification_docs/src/: SUMMARY.md  additional_features.md  blocksense_noir.md  getting_started.md  limitations.md  noir_fv_overview.md  noir_plonky2_backend.md  specs_grammar.md  starters.md  unconstrained_support.md
formal_verification_docs/src/annotations/: README.md  attributes.md  ghost_funcs.md  pre_and_postconditions.md  quantifiers.md  rec_loops.md
formal_verification_docs/src/noir_formal_verification/: README.md  getting_started.md
formal_verification_docs/src/noir_plonky2_backend/: README.md  getting_started.md
formal_verification_docs/src/noir_tracer/: README.md  debugging_with_codetracer.md
formal_verification_docs/src/verno/: README.md  limitations.md
fv_std/src/: lib.nr
noir_stdlib/src/ops/: bit.nr
test_programs/formal_verify_failure/apply_transactions/: Nargo.toml
test_programs/formal_verify_failure/expected_crash/: Nargo.toml
test_programs/formal_verify_failure/field_type_limit/: Nargo.toml
test_programs/formal_verify_failure/generics/: Nargo.toml
test_programs/formal_verify_failure/if_overflow/: Nargo.toml
test_programs/formal_verify_failure/integer_i16/: Nargo.toml
test_programs/formal_verify_failure/integer_i32/: Nargo.toml
test_programs/formal_verify_failure/integer_i64/: Nargo.toml
test_programs/formal_verify_failure/integer_i8/: Nargo.toml
test_programs/formal_verify_failure/integer_mult/: Nargo.toml
test_programs/formal_verify_failure/integer_u16/: Nargo.toml
test_programs/formal_verify_failure/integer_u32/: Nargo.toml
test_programs/formal_verify_failure/integer_u64/: Nargo.toml
test_programs/formal_verify_failure/integer_u8/: Nargo.toml
test_programs/formal_verify_failure/quantifier_type_limitation/: Nargo.toml
test_programs/formal_verify_failure/references/: Nargo.toml
test_programs/formal_verify_failure/string/: Nargo.toml
test_programs/formal_verify_success/field_type_limit_2/: Nargo.toml
test_programs/formal_verify_success/inline_functions_in_attributes/: Nargo.toml
test_programs/formal_verify_success/inline_tuple_returning_func/: Nargo.toml
test_programs/formal_verify_success/is_sorted_no_quant/: Nargo.toml
test_programs/formal_verify_success/load_store_instructions/: Nargo.toml
test_programs/plonky2_prove_failure/signed_lt_arr/: Prover.toml
test_programs/plonky2_prove_success/abi/: Nargo.toml
test_programs/plonky2_prove_success/bn254_prime/: Nargo.toml
test_programs/plonky2_prove_success/compute_shuffled_index/: Nargo.toml
test_programs/plonky2_show_plonky2_regression/zk_dungeon/: plonky2.expected_output.txt
test_programs/plonky2_trace/1_mul/: expected_trace.json
test_programs/plonky2_trace/2_function_calls/: expected_trace.json
test_programs/plonky2_trace_plonky2/3_two_files/: expected_metadata.json  expected_paths.json
test_programs/plonky2_trace_plonky2/loop_2_bad/: expected_metadata.json  expected_trace.json
test_programs/plonky2_verify_crash/array_argument/: Nargo.toml  Prover.toml  VerifierTest.toml
test_programs/trace_plonky2/2_function_calls/: expected_metadata.json  expected_trace.json
test_programs/trace_plonky2/3_two_files/: expected_trace.json
test_programs/trace_plonky2/loop_2_bad/: expected_paths.json
tooling/acvm_cli/: Cargo.toml
tooling/acvm_cli/src/: main.rs
tooling/artifact_cli/: Cargo.toml
tooling/artifact_cli/src/: errors.rs  execution.rs
tooling/artifact_cli/src/commands/: execute_cmd.rs
tooling/debugger/: Cargo.toml
tooling/debugger/src/: context.rs
tooling/fuzzer/: Cargo.toml
tooling/inspector/: Cargo.toml
tooling/lsp/: Cargo.toml
tooling/lsp/src/: with_file.rs
tooling/nargo/: Cargo.toml
tooling/nargo/src/: constants.rs  workspace.rs
tooling/nargo/src/artifacts/: trace.rs
tooling/nargo/src/foreign_calls/: print.rs
tooling/nargo/src/ops/: compile.rs  fuzz.rs  test.rs
tooling/nargo_cli/: Cargo.toml  build.rs
tooling/nargo_cli/src/: errors.rs  main.rs
tooling/nargo_cli/tests/: common.rs  execute.rs  stdlib-props.rs
tooling/nargo_fmt/: Cargo.toml  build.rs
tooling/nargo_toml/: Cargo.toml
tooling/noirc_abi/: Cargo.toml
tooling/noirc_abi/src/: lib.rs
tooling/noirc_abi_wasm/: Cargo.toml
tooling/noirc_abi_wasm/src/: lib.rs
tooling/noirc_artifacts/: Cargo.toml
tooling/noirc_artifacts/src/: contract.rs  debug_vars.rs  program.rs
tooling/noirc_artifacts_info/: Cargo.toml
tooling/profiler/: Cargo.toml
tooling/tracer/: Cargo.toml
tooling/tracer/src/: debugger_glue.rs  lib.rs  tracer_glue.rs
(+223 files in other folders)
