[package]
name = "acir_field_goldilocks"
description = "The Goldilocks field implementation being used by ACIR."
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true

ark-ff.workspace = true
ark-serialize.workspace = true
zeroize.workspace = true
rand.workspace = true

cfg-if.workspace = true

plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }

[dev-dependencies]
proptest.workspace = true

[features]
