[package]
name = "noir_debugger"
description = "Debugger for Noir"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[build-dependencies]
build-data.workspace = true

[dependencies]
acvm.workspace = true
fm.workspace = true
nargo.workspace = true
noirc_frontend.workspace = true
noirc_printable_type.workspace = true
noirc_errors.workspace = true
noirc_driver.workspace = true
noirc_artifacts.workspace = true
thiserror.workspace = true
codespan-reporting.workspace = true
dap.workspace = true
easy-repl = "0.2.1"
owo-colors = "3"
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"
rexpect = "0.5.0"
tempfile.workspace = true

[features]
bn254 = ["acvm/bn254", "nargo/bn254", "noirc_frontend/bn254", "noirc_printable_type/bn254", "noirc_driver/bn254", "noirc_artifacts/bn254"]
goldilocks = ["acvm/goldilocks", "nargo/goldilocks", "noirc_frontend/goldilocks", "noirc_printable_type/goldilocks", "noirc_driver/goldilocks", "noirc_artifacts/goldilocks"]
