[package]
name = "noir_fuzzer"
description = "A fuzzer for Noir programs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
noirc_artifacts.workspace = true
noirc_abi.workspace = true
proptest.workspace = true
rand.workspace = true

[features]
bn254 = ["acvm/bn254", "noirc_artifacts/bn254", "noirc_abi/bn254"]
bls12_381 = ["acvm/bls12_381", "noirc_artifacts/bls12_381", "noirc_abi/bls12_381"]
goldilocks = ["acvm/goldilocks", "noirc_artifacts/goldilocks", "noirc_abi/goldilocks"]
