[package]
name = "nargo"
description = "Noir's package manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
fm.workspace = true
noirc_abi.workspace = true
noirc_driver.workspace = true
noirc_errors.workspace = true
noirc_frontend.workspace = true
noirc_printable_type.workspace = true
iter-extended.workspace = true
jsonrpsee.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir = "2.5.0"
noir_fuzzer = { workspace = true }
proptest = { workspace = true }

# Some dependencies are optional so we can compile to Wasm.
tokio = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
jsonrpsee = { workspace = true, features = ["server"] }

[features]
default = []
bn254 = ["acvm/bn254", "noirc_abi/bn254", "noirc_driver/bn254", "noirc_frontend/bn254", "noirc_printable_type/bn254", "noir_fuzzer/bn254"]
bls12_381 = ["acvm/bls12_381", "noirc_abi/bls12_381", "noirc_driver/bls12_381", "noirc_frontend/bls12_381", "noirc_printable_type/bls12_381", "noir_fuzzer/bls12_381"]
goldilocks = ["acvm/goldilocks", "noirc_abi/goldilocks", "noirc_driver/goldilocks", "noirc_frontend/goldilocks", "noirc_printable_type/goldilocks", "noir_fuzzer/goldilocks"]

# Execution currently uses HTTP based Oracle resolvers; does not compile to Wasm.
rpc = ["jsonrpsee/http-client", "jsonrpsee/macros", "tokio/rt", "rand"]
