[package]
name = "noirc_artifacts"
description = "Definitions of Nargo's build artifacts"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
fm.workspace = true
noirc_abi.workspace = true
noirc_driver.workspace = true
noirc_errors.workspace = true
noirc_printable_type.workspace = true
serde.workspace = true
codespan-reporting.workspace = true


[dev-dependencies]
tempfile.workspace = true

[features]
bn254 = ["acvm/bn254", "noirc_abi/bn254", "noirc_driver/bn254", "noirc_printable_type/bn254"]
bls12_381 = ["acvm/bls12_381", "noirc_abi/bls12_381", "noirc_driver/bls12_381", "noirc_printable_type/bls12_381"]
goldilocks = ["acvm/goldilocks", "noirc_abi/goldilocks", "noirc_driver/goldilocks", "noirc_printable_type/goldilocks"]
