[package]
name = "noir_tracer"
description = "Tracer for Noir that produces execution traces"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
acvm.workspace = true
fm.workspace = true
nargo.workspace = true
noir_debugger.workspace = true
noirc_abi.workspace = true
noirc_artifacts.workspace = true
noirc_evaluator.workspace = true
noirc_printable_type.workspace = true
runtime_tracing.workspace = true
tracing.workspace = true

[features]
bn254 = ["acvm/bn254", "nargo/bn254", "noir_debugger/bn254", "noirc_abi/bn254", "noirc_artifacts/bn254", "noirc_evaluator/bn254", "noirc_printable_type/bn254"]
goldilocks = ["acvm/goldilocks", "nargo/goldilocks", "noir_debugger/goldilocks", "noirc_abi/goldilocks", "noirc_artifacts/goldilocks", "noirc_evaluator/goldilocks", "noirc_printable_type/goldilocks"]
